--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.9'
 
 services:
@@ -37,3 +38,6 @@ services:
     volumes:
       - .:/usr/src/app
     restart: unless-stopped
+    EXPOSE 3000
+    CMD ["npm", "start"]
+    
