--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.9'
 
 services:
@@ -13,6 +12,7 @@ services:
     volumes:
       - ./.docker/postgres:/var/lib/postgresql/data
     restart: unless-stopped
+
   db2:
     image: mysql:8
     environment:
@@ -22,22 +22,23 @@ services:
     ports:
       - "3306:3306"
     volumes:
-        - ./.docker/mysql:/var/lib/mysql
-        app:
-    build: .
+      - ./.docker/mysql:/var/lib/mysql
+
+  app:
+    build: .  # Build from the Dockerfile in the current directory
     environment:
       NODE_ENV: production
       POSTGRES_HOST: db
       MYSQL_HOST: db2
       HUGGING_FACE_API_KEY: your-hugging-face-api-key
     ports:
-      - "3000:3000"  # Exposing port 3000, or use process.env.PORT if you want to make it dynamic
+      - "3000:3000"  # Exposing port 3000 (make sure your app binds to this port)
     depends_on:
       - db
       - db2
     volumes:
       - .:/usr/src/app
     restart: unless-stopped
-    EXPOSE 3000
-    CMD ["npm", "start"]
-    
+    command: ["npm", "start"]
+    expose:
+      - "3000"
