--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^1.8.1",
     "better-sqlite3": "^9.6.0",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "mysql2": "^3.12.0",
     "node-fetch": "^2.7.0",
     "pg": "^8.13.3",
